--- a/src/application/IdayvueltaPage.fxml
+++ b/src/application/IdayvueltaPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
       <Button fx:id="btnMenosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onAction="#precioSumaResta" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
@@ -33,7 +33,7 @@
             <Font name="Malgun Gothic" size="32.0" />
          </font>
       </Text>
-      <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" onAction="#eventActiongetPrecioBilleteBase" prefHeight="51.0" prefWidth="283.0" />
+      <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" onAction="#eventActiongetPrecioBilleteBase" onMouseClicked="#setDatePickerVuelta" prefHeight="51.0" prefWidth="283.0" />
       <DatePicker fx:id="dpVuelta" layoutX="333.0" layoutY="125.0" onAction="#eventActiongetPrecioBilleteBase" prefHeight="51.0" prefWidth="267.0" />
       <ComboBox fx:id="cbOrigen" layoutX="50.0" layoutY="25.0" onAction="#eventActiongetPrecioBilleteBase" onMouseClicked="#setComboBoxOrigen" prefHeight="51.0" prefWidth="327.0" />
       <ComboBox fx:id="cbDestino" layoutX="443.0" layoutY="25.0" onAction="#eventActiongetPrecioBilleteBase" onMouseClicked="#setComboBoxDestino" prefHeight="51.0" prefWidth="307.0" />
