--- a/src/application/SegurosPage.fxml
+++ b/src/application/SegurosPage.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SegurosClass">
    <children>
-      <DatePicker fx:id="dpInicio" layoutX="440.0" layoutY="46.0" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="200.0" />
+      <DatePicker fx:id="dpInicio" layoutX="440.0" layoutY="46.0" onAction="#eventActionInfoSeguro" onMouseClicked="#setDatePickerFin" prefHeight="51.0" prefWidth="200.0" />
       <DatePicker fx:id="dpFin" layoutX="640.0" layoutY="46.0" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="200.0" />
       <Text fx:id="txtPrecio" fill="#1d334a" layoutX="665.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="145.13671875">
          <font>
