--- a/bin/application/ExperienciasPage.fxml
+++ b/bin/application/ExperienciasPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ExperienciasClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ExperienciasClass">
    <children>
       <ComboBox fx:id="cbCiudad" layoutX="60.0" layoutY="72.0" onMouseClicked="#setComboBoxCiudad" prefHeight="50.0" prefWidth="350.0" />
       <DatePicker fx:id="dpFecha" layoutX="60.0" layoutY="266.0" onAction="#eventActiongetPrecios" prefHeight="51.0" prefWidth="200.0" />
@@ -47,7 +47,7 @@
          </font>
       </Text>
       <ComboBox fx:id="cbExperiencias" layoutX="573.0" layoutY="72.0" onAction="#setExperienciaSeleccionada" onMouseClicked="#setComboBoxExperiencia" prefHeight="50.0" prefWidth="350.0" />
-      <Button layoutX="360.0" layoutY="266.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
+      <Button fx:id="btnMenosExp" layoutX="360.0" layoutY="266.0" mnemonicParsing="false" onAction="#precioSumaResta" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -55,7 +55,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="260.0" layoutY="266.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
+      <Button fx:id="btnMasExp" layoutX="260.0" layoutY="266.0" mnemonicParsing="false" onAction="#precioSumaResta" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -63,7 +63,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Text fill="#1d334a" layoutX="310.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="50.0">
+      <Text fx:id="txtNumExp" fill="#1d334a" layoutX="310.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="50.0">
          <font>
             <Font name="Malgun Gothic" size="32.0" />
          </font>
