--- a/bin/application/SegurosPage.fxml
+++ b/bin/application/SegurosPage.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SegurosClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SegurosClass">
    <children>
       <DatePicker fx:id="dpInicio" layoutX="390.0" layoutY="58.0" onAction="#eventActionInfoSeguro" onMouseClicked="#setDatePickerFin" prefHeight="51.0" prefWidth="250.0" />
       <DatePicker fx:id="dpFin" layoutX="640.0" layoutY="58.0" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="250.0" />
-      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="712.0" layoutY="515.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="145.13671875">
+      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="609.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="250.0">
          <font>
             <Font name="Malgun Gothic" size="50.0" />
          </font>
